# Physics-Kinetic-Gases-Model

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
rust_wasm/mkt-basic/: Cargo.toml  LICENSE_MIT
rust_wasm/mkt-basic/pkg/: main.js  mkt_basic.d.ts  mkt_basic.js  mkt_basic_bg.js  mkt_basic_bg.wasm  mkt_basic_bg.wasm.d.ts  package.json
rust_wasm/mkt-basic/src/: lib.rs
src/: App.vue  main.js
src/assets/lib/: multithread.js
src/assets/res/: balls.mkv
src/assets/style/: base.css  big-header.css  home.css
src/components/: BigHeaderComponent.vue  HeaderComponent.vue  SimulationPack.vue  TestComponent.vue
src/lib/: GasChart.js  graph.js
src/router/: index.js
src/views/: HomeView.vue  IdealGasGenSimView.vue  TwoGasSimView.vue
