[package]
name = "mkt-basic"
version = "0.1.0"
authors = ["eee <proffegor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
debug = true


[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }

wee_alloc = { version = "0.4.5", optional = true }

js-sys = "0.3"
wasm-bindgen-futures = "0.4.34"
lazy_static = "1.4.0"
# rand = "0.8.5"


[dev-dependencies]
wasm-bindgen-test = "0.3.13"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
